Edited contact page styling to prevent icons from overlapping

--- a/css/contact.scss
+++ b/css/contact.scss
@@ -21,7 +21,6 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: calc(100vh - 32px - 308px);
   justify-content: center;
   padding: 10px;
 }
@@ -80,8 +79,6 @@ form {
   display: inline-flex;
   flex-direction: row;
   justify-content: center;
-  padding-bottom: 50px;
-  padding-top: 50px;
 }
 // GitHub Link
 #social-media-logo1 {
@@ -135,8 +132,6 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding-bottom: 100px;
-    padding-top: 10px;
   }
   // GitHub
   #social-media-logo1 {
